Reports: Style overflow fixes
- Date range fixes in spanish

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -145,6 +145,15 @@ body.lang_es {
   }
 
 
+  #ReportsPage {
+    .form-row.range {
+      .range-end {
+        width: 125px;
+      }
+    }
+  }
+
+
   #AuctionDashboardPage {
     @media (max-width: 1090px) {
 
